--- a/public/views/index.html
+++ b/public/views/index.html
@@ -52,6 +52,7 @@
             <md-nav-item md-nav-href="#admin-intern" name="Interns">Interns</md-nav-item>
             <md-nav-item md-nav-href="#updateQuestions" name="Update Questions">Update Questions</md-nav-item>
             <md-nav-item md-nav-href="#importExport" name="Import/Export">Import/Export</md-nav-item>
+            <md-nav-item md-nav-href="#feedbackform" name="Import/Export">Import/Export</md-nav-item>
           </md-nav-bar>
         </md-content>
       </div>
