--- a/public/views/templates/admin-intern.html
+++ b/public/views/templates/admin-intern.html
@@ -1,4 +1,5 @@
-<title>Admin Intern View</title>
+<div class="adminIntern">
+  <title>Admin Intern View</title>
   <style>
   /*list styles*/
   ul.a {
@@ -9,7 +10,7 @@
   <!-- contact interns list -->
   <h2>Achieve: 30% have responded</h2>
   <h2>Discover: 50% have responded</h2>
-  <md-content>
+  <md-content class="adminIntern">
     <h2>Interns who wish to be contacted:</h2>
     <ul class="a">
       <md-list flex>FirstName, LastName, Phone</md-list>
@@ -17,14 +18,14 @@
       <md-list flex>FirstName, LastName, Phone</md-list>
     </ul>
   </md-content>
-  <md-content>
+  <md-content class="adminIntern">
     <h2>Flagged Interns (1-2 Range Reseponses):</h2>
     <ul class="a">
       <md-list flex>FirstName, LastName, Phone</md-list>
       <md-list flex>FirstName, LastName, Phone</md-list>
       <md-list flex>FirstName, LastName, Phone</md-list>
     </ul>
-  </md-content>
+  </md-content class="adminIntern">
   <h2>This week's comments:</h2>
   <md-tabs>
     <md-tab label="Comment #1"><p>Woohoo this is the start</p></md-tab>
@@ -32,4 +33,5 @@
     <md-tab label="Comment #3"><p>Comment tabs are super cool!</p></md-tab>
     <md-tab><a href="" md-highlight-text="searchTerm">View All Comments</a></md-tab>
   </md-tabs>
+</div>
 </div>
