--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -3,7 +3,7 @@ General/Index
 ****************************/
 
 html, body, nav, .navPad {
-  background-color: #faf0e6;
+  background-color: #e8e8ee;
 }
 
 #toolbar {
@@ -17,6 +17,7 @@ html, body, nav, .navPad {
 
 .StepUp {
   text-align: center;
+  border: 1px solid #008AC0;
 }
 
 .stepUp {
@@ -70,11 +71,17 @@ admin-home
   text-align: center;
 }
 
+.adminHome {
+  background-color: #e8e8ee;
+  margin-left: 3vmin;
+}
+
 /***************************
 admin-intern
 ****************************/
 .adminIntern {
   margin-left: 3vmin;
+  background-color: #e8e8ee;
 }
 
 /***************************
