--- a/public/views/templates/admin-home.html
+++ b/public/views/templates/admin-home.html
@@ -1,7 +1,8 @@
-<h2>Step up Staff</h2>
-<div ng-init="AHC.getAdmins()">
-	<md-content layout="column" layout-gt-sm="row" layout-padding>
-		<div ng-repeat="admin in AHC.adminArray">
+<div class="adminHome">
+	<h2>Step up Staff</h2>
+<div class="adminHome" ng-init="AHC.getAdmins()">
+	<md-content class="adminHome" layout="column" layout-gt-sm="row" layout-padding>
+		<div class="adminHome" ng-repeat="admin in AHC.adminArray">
 			<h4>{{admin.firstname}}</h4>
 			<h4>{{admin.lastname}}</h4>
 			<h4>{{admin.email}}</h4>
@@ -10,8 +11,8 @@
 	</md-content>
 </div>
 <h2>Add new Admin</h2>
-<div layout-gt-sm="row" layout-padding>
-	<md-content>
+<div class="adminHome" layout-gt-sm="row" layout-padding>
+	<md-content class="adminHome">
 		<md-input-container>
 			<label>First Name</label>
 			<input ng-model="AHC.adminFirstNameIn" type="name">
@@ -28,4 +29,5 @@
 		</md-input-container>
 		<button ng-click="AHC.postAdmins(AHC.adminFirstNameIn, AHC.adminLastNameIn, AHC.adminEmailIn)" md-button>Add New Admin</button>
 	</md-content>
+</div>
 </div>
