--- a/public/views/templates/admin-intern.html
+++ b/public/views/templates/admin-intern.html
@@ -25,7 +25,7 @@
       <md-list flex>FirstName, LastName, Phone</md-list>
       <md-list flex>FirstName, LastName, Phone</md-list>
     </ul>
-  </md-content class="adminIntern">
+  </md-content>
   <h2>This week's comments:</h2>
   <md-tabs>
     <md-tab label="Comment #1"><p>Woohoo this is the start</p></md-tab>
@@ -33,5 +33,4 @@
     <md-tab label="Comment #3"><p>Comment tabs are super cool!</p></md-tab>
     <md-tab><a href="" md-highlight-text="searchTerm">View All Comments</a></md-tab>
   </md-tabs>
-</div>
 </div>
