--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -105,3 +105,8 @@ updateQuestion
   /*text-align: center;*/
   font-family: 'Oswald', sans-serif;
 }
+
+.adminHomeStyle{
+  font-family: 'Oswald', sans-serif;
+
+}
