--- a/public/views/templates/admin-home.html
+++ b/public/views/templates/admin-home.html
@@ -1,16 +1,20 @@
-<h2>Step up Staff</h2>
+<div class="adminHomeStyle">
+<h2>Step Up Staff</h2>
 <div ng-init="AHC.getAdmins()">
-	<md-content layout="column" layout-gt-sm="row" layout-padding>
-		<div ng-repeat="admin in AHC.adminArray">
-			<h4>{{admin.firstname}}</h4>
-			<h4>{{admin.lastname}}</h4>
-			<h4>{{admin.email}}</h4>
-      <button ng-click="AHC.deleteAdmins(admin.id)" md-button>Remove</button>
+	<md-content layout-gt-sm="row" layout-padding>
+		<div ng-repeat="admin in AHC.adminArray" layout='column'>
+			<h4>First Name:</h4>{{admin.firstname}}
+      <md-divider ></md-divider>
+			<h4>Last Name:</h4>{{admin.lastname}}
+      <md-divider ></md-divider>
+			<h4>Email:</h4>{{admin.email}}
+      <md-divider ></md-divider>
+      <button ng-click="AHC.deleteAdmins(admin.id)" md-button class="md-raised md-primary">Remove</button>
 		</div>
 		<md-divider ></md-divider>
 	</md-content>
 </div>
-<h2>Add new Admin</h2>
+<h2>Add New Admin</h2>
 <div layout-gt-sm="row" layout-padding>
 	<md-content>
 		<md-input-container>
@@ -27,6 +31,7 @@
 			<label>Email</label>
 			<input ng-model="AHC.adminEmailIn" type="email">
 		</md-input-container>
-		<button ng-click="AHC.postAdmins(AHC.adminFirstNameIn, AHC.adminLastNameIn, AHC.adminEmailIn)" md-button>Add New Admin</button>
+		<button ng-click="AHC.postAdmins(AHC.adminFirstNameIn, AHC.adminLastNameIn, AHC.adminEmailIn)" md-button class="md-raised md-primary">Add New Admin</button>
 	</md-content>
+</div>
 </div>
