working on grabing questions for db

--- a/public/views/templates/updateQuestions.html
+++ b/public/views/templates/updateQuestions.html
@@ -6,31 +6,32 @@
       <md-input-container>
         <label>Question 1</label>
         <md-select name="type" ng-model="">
-          <md-option>Questions form DB</md-option>
+          <md-option><em>None</em></md-option>
+          <md-option ng-repeat="question in UQC.item">Questions from DB</md-option>
         </md-select>
       </md-input-container>
       <md-input-container>
         <label>Question 2</label>
         <md-select name="type" ng-model="">
-          <md-option>Questions form DB</md-option>
+          <md-option>Questions from DB</md-option>
         </md-select>
       </md-input-container>
       <md-input-container>
         <label>Question 3</label>
         <md-select name="type" ng-model="">
-          <md-option>Questions form DB</md-option>
+          <md-option>Questions from DB</md-option>
         </md-select>
       </md-input-container>
       <md-input-container>
         <label>Question 4</label>
         <md-select name="type" ng-model="">
-          <md-option>Questions form DB</md-option>
+          <md-option>Questions from DB</md-option>
         </md-select>
       </md-input-container>
       <md-input-container>
         <label>Question 5</label>
         <md-select name="type" ng-model="">
-          <md-option>Questions form DB</md-option>
+          <md-option>Questions from DB</md-option>
         </md-select>
       </md-input-container>
     </div>
