getting question on DOM

--- a/public/views/templates/updateQuestions.html
+++ b/public/views/templates/updateQuestions.html
@@ -2,14 +2,19 @@
 <main class="container" ng-app="theGoogles">
   <div class="updateQuestions">
     <h1>Update Questions:</h1>
-    <div layout="column" >
-      <md-input-container>
+
+    <div ng-repeat="question in UQC.questionCont.questions">
+      {{question.q_text}}
+    </div>
+
+    <div layout="column">
+      <!-- <md-input-container>
         <label>Question 1</label>
-        <md-select ng-model="UQC.item">
+        <md-select ng-model="UQC.userQuestion">
           <md-option><em>None</em></md-option>
-          <md-option ng-repeat="question in UQC.item" ng-vaule="question.q_text">{{question.q_text}}</md-option>
+          <md-option ng-repeat="question in UQC.questions" ng-vaule="question.q_text" ng-disabled="$index === 1">{{question.q_text}}</md-option>
         </md-select>
-      </md-input-container>
+      </md-input-container> -->
       <!-- <md-button ng-click="UQC.grabQuestion()" class="md-raised md-primary" style="background-color: #008AC0">Grab Question</md-button> -->
       <!-- <md-input-container>
         <label>Question 2</label>
