--- a/public/views/index.html
+++ b/public/views/index.html
@@ -49,6 +49,7 @@
       <md-list layout="row" layout-align="center" class="six columns" ng-show="nav.displayLogout">Hi {{nav.username}}! | <a href="#" ng-click="nav.logout()">Logout</a></md-list>
       <div layout="row" layout-align="center" ng-show="nav.navBar">
         <md-content class="md-padding navPad">
+          <md-colors>
           <md-nav-bar class="navBar">
             <md-nav-item md-nav-href="#admin-home" name="Home">Home</md-nav-item>
             <md-nav-item md-nav-href="#admin-intern" name="Interns">Interns</md-nav-item>
@@ -56,6 +57,7 @@
             <md-nav-item md-nav-href="#importExport" name="Import/Export">Import/Export</md-nav-item>
             <md-nav-item md-nav-href="#feedbackform" name="Import/Export">Feedback Form</md-nav-item>
           </md-nav-bar>
+          </md-colors>
         </md-content>
       </div>
       <md-toolbar id="toolbar" layout="column" ng-show="nav.toolbar">
