csvJson almost working...

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -11,6 +11,7 @@
   <script src="public/vendors/angular-animate.min.js" charset="utf-8"></script>
   <script src="public/vendors/angular-aria.min.js" charset="utf-8"></script>
   <script src="public/vendors/angular-material.min.js" charset="utf-8"></script>
+  <script type="text/javascript" src="//static.filestackapi.com/v3/filestack-0.6.3.js"></script>
   <!-- swal js -->
   <script src="public/vendors/sweetalert.min.js" charset="utf-8"></script>
   <!-- js -->
