--- a/public/views/templates/feedbackform.html
+++ b/public/views/templates/feedbackform.html
@@ -134,7 +134,7 @@
 			<h3>Do you want someone from STEP-UP to contact you this week?</h3>
 			<div flex-gt-sm="50">
 				<md-checkbox ng-model="cb1" aria-label="Checkbox 1">
-					Yes, please talk with me. {{ cb1 }}
+					Yes, please talk with me. 
 				</md-checkbox>
 			</div>
 
