display question to DOM

--- a/public/views/templates/updateQuestions.html
+++ b/public/views/templates/updateQuestions.html
@@ -13,35 +13,35 @@
       <div layout="column">
         <md-input-container>
           <label>Question 1</label>
-          <md-select ng-model="UQC.userQuestion1">
+          <md-select ng-model="UQC.active1">
             <md-option><em>None</em></md-option>
             <md-option ng-repeat="question in UQC.questionCont.questions" ng-value="question.q_text" >{{question.q_text}}</md-option>
           </md-select>
         </md-input-container>
         <md-input-container>
           <label>Question 2</label>
-          <md-select ng-model="UQC.userQuestion2">
+          <md-select ng-model="UQC.active2">
             <md-option><em>None</em></md-option>
             <md-option ng-repeat="question in UQC.questionCont.questions" ng-value="question.q_text" >{{question.q_text}}</md-option>
           </md-select>
         </md-input-container>
         <md-input-container>
           <label>Question 3</label>
-          <md-select ng-model="UQC.userQuestion3">
+          <md-select ng-model="UQC.active3">
             <md-option><em>None</em></md-option>
             <md-option ng-repeat="question in UQC.questionCont.questions" ng-value="question.q_text" >{{question.q_text}}</md-option>
           </md-select>
         </md-input-container>
         <md-input-container>
           <label>Question 4</label>
-          <md-select ng-model="UQC.userQuestion4">
+          <md-select ng-model="UQC.active4">
             <md-option><em>None</em></md-option>
             <md-option ng-repeat="question in UQC.questionCont.questions" ng-value="question.q_text" >{{question.q_text}}</md-option>
           </md-select>
         </md-input-container>
         <md-input-container>
           <label>Question 5</label>
-          <md-select ng-model="UQC.userQuestion5">
+          <md-select ng-model="UQC.active5">
             <md-option><em>None</em></md-option>
             <md-option ng-repeat="question in UQC.questionCont.questions" ng-value="question.q_text" >{{question.q_text}}</md-option>
           </md-select>
