--- a/public/views/templates/login.html
+++ b/public/views/templates/login.html
@@ -1,5 +1,5 @@
 <!-- Consider this the main view -->
-<h2 class="login">Login Page</h2>
+<!-- <h2 class="login">Login Page</h2> -->
 <!-- Shown for users that are NOT logged in -->
 <section ng-hide="auth.loggedIn" class="signGoogle">
   <!-- I got this button image from Googles sign-in button brand guidelines page -->
