data viz working

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -14,6 +14,8 @@
   <script type="text/javascript" src="//static.filestackapi.com/v3/filestack-0.6.3.js"></script>
   <!-- swal js -->
   <script src="public/vendors/sweetalert.min.js" charset="utf-8"></script>
+  <script src="public/vendors/Chart.min.js"></script>
+
   <!-- js -->
   <script src="/public/scripts/client.js"></script>
   <script src="public/scripts/services/adminHomeService.js" charset="utf-8"></script>
