--- a/public/views/templates/feedbackform.html
+++ b/public/views/templates/feedbackform.html
@@ -9,7 +9,7 @@
 			<div ng-repeat="question in FBFC.activeQuestions">
 				<div id="{{question.id}}">
 					<h3>Question {{question.count}}: {{question.q_text}}</h3>
-					<md-radio-group ng-model="question.data">
+					<md-radio-group ng-model="question.data" ng-required="true">
 
 						<md-radio-button value="1"> 1 </md-radio-button>
 						<md-radio-button value="2"> 2 </md-radio-button>
@@ -134,7 +134,7 @@
 			<h3>Do you want someone from STEP-UP to contact you this week?</h3>
 			<div flex-gt-sm="50">
 				<md-checkbox ng-model="cb1" aria-label="Checkbox 1">
-					Yes, please talk with me. 
+					Yes, please talk with me.
 				</md-checkbox>
 			</div>
 
