separated cards for admin add and admin list

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -50,7 +50,7 @@
       <div layout="row" layout-align="center" ng-show="nav.navBar">
         <md-content class="md-padding navPad">
           <md-colors>
-          <md-nav-bar class="navBar" aria-label = "navigation bar">
+          <md-nav-bar class="navBar" aria-label = "navigation ">
             <md-nav-item md-nav-href="#admin-home" name="Home">Home</md-nav-item>
             <md-nav-item md-nav-href="#admin-intern" name="Interns">Interns</md-nav-item>
             <md-nav-item md-nav-href="#updateQuestions" name="Update Questions">Update Questions</md-nav-item>
