--- a/public/views/templates/admin-home.html
+++ b/public/views/templates/admin-home.html
@@ -20,6 +20,8 @@
 			<md-divider></md-divider>
 		</md-content>
 	</div>
+	</md-card>
+	<md-card>
 	<div layout-gt-sm="row" layout-padding  layout-align="center center">
 		<md-content>
 			<h1>Add New Admin</h1>
