updated some styling more to come

--- a/public/views/templates/admin-home.html
+++ b/public/views/templates/admin-home.html
@@ -1,5 +1,8 @@
 <div class="adminHomeStyle">
 	<div ng-init="AHC.getAdmins()">
+		<md-toolbar id="toolbar" layout="column" style="height:50px">
+			<h1 id="toolBarText">Admin Home</h1>
+		</md-toolbar>
 		<md-card>
 			<div class="pickAdmin">
 				<h1>Step Up Admins</h1>
