--- a/public/views/templates/feedbackform.html
+++ b/public/views/templates/feedbackform.html
@@ -1,7 +1,9 @@
 <DIV class="feedbackform" ng-init="FBFC.getQuestions()">
 
 	<!-- FBFC.checkEmail(FBFC.useremail) -->
-
+	<md-toolbar id="toolbar" layout="column" style="height:50px">
+    <h1 id="toolBarText">Intern Weekly Feedback</h1>
+  </md-toolbar>
 	<!-- <md-button ng-click="FBFC.getQuestions()">Get Questions</md-button> -->
 	<div>
 		<form ng-submit="submit()" ng-cloak>
