--- a/public/views/templates/importExport.html
+++ b/public/views/templates/importExport.html
@@ -1,8 +1,11 @@
 <main class="container" ng-app="theGoogles">
   <div class="importExportMain">
-    <div class="importExport">
+    <!-- <div class="importExport">
       <h1>Annual Import/Export</h1>
-    </div>
+    </div> -->
+    <md-toolbar id="toolbar" layout="column" style="height:50px">
+      <h1 id="toolBarText">Annual Data Import and Export</h1>
+    </md-toolbar>
     <div class="importFileContainer">
       <br>
       <h3>Please select the CSV file that you'd like to import!</h3>
