--- a/public/views/templates/updateQuestions.html
+++ b/public/views/templates/updateQuestions.html
@@ -1,5 +1,8 @@
 <!-- Jim's Work -->
 <main class="container" ng-app="theGoogles">
+  <md-toolbar id="toolbar" layout="column" style="height:50px">
+    <h1 id="toolBarText">Update Weekly Questions</h1>
+  </md-toolbar>
   <div class="updateQuestions">
     <br>
     <md-card>
