--- a/public/views/templates/admin-intern.html
+++ b/public/views/templates/admin-intern.html
@@ -1,5 +1,8 @@
 <div class="adminIntern">
   <title>Admin Intern View</title>
+  <md-toolbar id="toolbar" layout="column" style="height:50px">
+    <h1 id="toolBarText">Intern Data Overview</h1>
+  </md-toolbar>
   <style>
   /*list styles*/
   ul.a {
