update question in progress

--- a/public/views/templates/updateQuestions.html
+++ b/public/views/templates/updateQuestions.html
@@ -13,45 +13,48 @@
       <div layout="column">
         <md-input-container>
           <label>Question 1</label>
-          <md-select ng-model="UQC.active1">
+          <md-select ng-model="UQC.active1In">
             <md-option><em>None</em></md-option>
             <md-option ng-repeat="question in UQC.questionCont.questions" ng-value="question.q_text" >{{question.q_text}}</md-option>
           </md-select>
         </md-input-container>
         <md-input-container>
           <label>Question 2</label>
-          <md-select ng-model="UQC.active2">
+          <md-select ng-model="UQC.active2In">
             <md-option><em>None</em></md-option>
             <md-option ng-repeat="question in UQC.questionCont.questions" ng-value="question.q_text" >{{question.q_text}}</md-option>
           </md-select>
         </md-input-container>
         <md-input-container>
           <label>Question 3</label>
-          <md-select ng-model="UQC.active3">
+          <md-select ng-model="UQC.active3In">
             <md-option><em>None</em></md-option>
             <md-option ng-repeat="question in UQC.questionCont.questions" ng-value="question.q_text" >{{question.q_text}}</md-option>
           </md-select>
         </md-input-container>
         <md-input-container>
           <label>Question 4</label>
-          <md-select ng-model="UQC.active4">
+          <md-select ng-model="UQC.active4In">
             <md-option><em>None</em></md-option>
             <md-option ng-repeat="question in UQC.questionCont.questions" ng-value="question.q_text" >{{question.q_text}}</md-option>
           </md-select>
         </md-input-container>
         <md-input-container>
           <label>Question 5</label>
-          <md-select ng-model="UQC.active5">
+          <md-select ng-model="UQC.active5In">
             <md-option><em>None</em></md-option>
             <md-option ng-repeat="question in UQC.questionCont.questions" ng-value="question.q_text" >{{question.q_text}}</md-option>
           </md-select>
         </md-input-container>
      </div>
     <md-card-content>
+      <div class="sendSMS">
+        <md-button ng-click="UQC.submitQuestion(UQC.active1In, UQC.active2In, UQC.active3In, UQC.active4In, UQC.active5In)" class="md-raised md-primary" id="submitQues">Submit Questions</md-button>
+      </div>
   </md-card>
   <br>
   <div class="sendSMS">
-    <md-button ng-click="UQC.sendQuestion()" class="md-raised md-primary" id="sendFeedback">Send Feedback Link</md-button>
+    <!-- <md-button ng-click="UQC.sendQuestion()" class="md-raised md-primary" id="sendFeedback">Send Feedback Link</md-button> -->
   </div>
   <br>
   <md-card>
