--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -165,6 +165,10 @@ updateQuestion
   background-color: #008AC0;
 }
 
+#submitQues {
+  background-color: #008AC0;
+}
+
 #sendFeedback {
   background-color: #F68628;
 }
